--- a/packages/fast-animation/package.json
+++ b/packages/fast-animation/package.json
@@ -46,6 +46,11 @@
     ]
   },
   "devDependencies": {
+    "@microsoft/fast-components-class-name-contracts-base": "^1.8.0",
+    "@microsoft/fast-jest-snapshots-react": "^1.8.0",
+    "@microsoft/fast-jss-manager": "^1.8.0",
+    "@microsoft/fast-jss-manager-react": "^1.8.0",
+    "@microsoft/fast-jss-utilities": "^1.8.0",
     "@microsoft/fast-tslint-rules": "^1.8.0",
     "@types/jest": "^21.1.2",
     "@types/node": "^7.0.22",
@@ -91,6 +96,11 @@
     "@types/web-animations-js": "^2.2.5"
   },
   "peerDependencies": {
-    "lodash-es": "^4.0.0"
+    "lodash-es": "^4.0.0",
+    "@microsoft/fast-components-class-name-contracts-base": "^1.8.0",
+    "@microsoft/fast-jest-snapshots-react": "^1.8.0",
+    "@microsoft/fast-jss-manager": "^1.8.0",
+    "@microsoft/fast-jss-manager-react": "^1.8.0",
+    "@microsoft/fast-jss-utilities": "^1.8.0"
   }
 }
