--- a/packages/fast-viewer-react/tsconfig.json
+++ b/packages/fast-viewer-react/tsconfig.json
@@ -1,7 +1,19 @@
 {
     "compilerOptions": {
-        "sourceMap": true,
-        "target": "es5",
-        "jsx": "react"
-    }
+        "moduleResolution": "node",
+        "module": "ES6",
+        "target": "ES6",
+        "baseUrl": ".",
+        "declaration": true,
+        "jsx": "react",
+        "outDir": "./dist"
+    },
+    "include": [
+        "src/**/*"
+    ],
+    "exclude": [
+        "node_modules",
+        "**/*.spec.ts",
+        "**/*.spec.tsx"
+    ]
 }
